objects/zkusps__ShipmentCustomsItem__c.object
<CustomObject>
    <description>Junction between Shipment object and Customs Item object</description>
    <fields>
        <fullName>zkusps__allowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__customsItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USPS Customs Item</label>
        <referenceTo>zkusps__CustomsItem__c</referenceTo>
        <relationshipLabel>USPS Shipment Customs Items</relationshipLabel>
        <relationshipName>USPS_Shipment_Customs_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkusps__quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__shipment__c</fullName>
        <label>USPS Shipment</label>
        <referenceTo>zkusps__Shipment__c</referenceTo>
        <relationshipLabel>USPS Shipment Customs Items</relationshipLabel>
        <relationshipName>USPS_Shipment_Customs_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Shipment Customs Item</label>
    <nameField>
        <displayFormat>Shipment-Cust-Item-{00000000}</displayFormat>
        <label>Shipment Customs Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Shipment Customs Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>